fix: stylez changed to hide one scrollbar

--- a/assets/css/marketing-funnel-style.scss
+++ b/assets/css/marketing-funnel-style.scss
@@ -87,5 +87,33 @@
   }
 }
 
+.calendly-inline-widget {
+  overflow: hidden;
 
+  body {
+    overflow: hidden;
+  }
+}
+
+.calendly-inline-widget iframe {
+  height: calc(100vh - 50px);
+  width: 100%;
+  border: none;
+  overflow: hidden;
+
+  body {
+    overflow: hidden;
+  }
+}
   
+@media screen and (max-width: 767px) {
+  .calendly-inline-widget {
+      height: auto; /* Ändere die Höhe auf 'auto' für die mobile Ansicht */
+  }
+
+  .calendly-inline-widget iframe {
+    height: 100vh; /* Volle Bildschirmhöhe ohne Scrollbars */
+    overflow: hidden; /* Verhindert das Scrollen innerhalb des iFrames */
+}
+}
+
